# qomo

./: .gitignore  Readme.md
.github/workflows/: python.yaml  python.yml  rust.yaml
core/: Cargo.toml
core/src/: helper.rs  lib.rs  main.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
rust/: Cargo.toml
rust/src/: helper.rs  lib.rs
zig/: build.zig  build.zig.zon
zig/src/: main.zig  root.zig
