[package]
name = "qomo"
version = "0.0.5"
edition = "2021"
description = "A quantum computing toolkit for learning and visualization."
repository = "https://github.com/haoxins/qomo"
license = "MIT"
keywords = ["quantum", "quantum-computing", "visualization", "simulation"]

[dependencies]
nalgebra = "0.32"
num = "0.4"
num-traits = "0.2"
plotters = "0.3"
