[project]
name = "qomo"
description = "A quantum computing toolkit for learning and visualization."
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]
keywords = [
  "quantum",
  "quantum-computing",
  "visualization",
  "simulation",
]
license = "MIT"
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
